# semantic-search-api

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.yml  dockerfile  pyproject.toml
adapters/: database.py  openai_adapter.py
app/: app.py
app/adapters/: db_adapter.py  openai_adapter.py  repository.py
app/api/: routes.py  web_routes.py
app/core/: entities.py  services.py
app/templates/: index.html
config/: config.py
domain/: embedding_service.py
templates/: index.html
