[tool.poetry]
name = "package 1"
version = "0.1.0"
description = ""
authors = ["Javier Cadena <aj-cadena@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
postgrest = "^0.19.3"
pgvector = "^0.3.6"
openai = "^1.60.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
