[tool.poetry]
name = "semanticsearch" 
version = "0.1.0"
description = "semanticsearch  is a simple Flask app that uses OpenAI's GPT-3 to search for similar text in a PostgreSQL database."
authors = ["Javier Cadena <aj-cadena@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pgvector = "0.3.6"  
openai = "^1.60.2"
sqlalchemy = ">=2.0,<2.1"
psycopg2-binary = "^2.9.0"
pydantic = "^2.10.6"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


